Clean up of unnecessary routes
